v1.1.1 - Migrate to new API - Add emote caching